[gd_scene load_steps=11 format=3 uid="uid://dp7h1hw7ti30q"]

[ext_resource type="Script" path="res://dino vs lizzards/random/enime.gd" id="1_cowcj"]
[ext_resource type="PackedScene" uid="uid://drks05lqchk6i" path="res://explosion/explosion.tscn" id="2_hdrxm"]
[ext_resource type="PackedScene" uid="uid://clgpcdnpi82eq" path="res://health.tscn" id="3_uwwfn"]

[sub_resource type="SphereMesh" id="SphereMesh_jmpnk"]
radius = 0.1
height = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jh8eo"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_n7yko"]
material = SubResource("StandardMaterial3D_jh8eo")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_tm7oi"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_o6l11"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_5bd4l"]
material = SubResource("StandardMaterial3D_o6l11")
radius = 0.09
height = 0.2

[sub_resource type="ViewportTexture" id="ViewportTexture_xin7m"]
viewport_path = NodePath("SubViewport")

[node name="enime" type="CharacterBody3D" groups=["enime"]]
script = ExtResource("1_cowcj")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(1.76434, 0, 0, 0, 2.01868, 0, 0, 0, 1, -0.19778, 0.683346, 0.438366)
mesh = SubResource("SphereMesh_jmpnk")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="."]
transform = Transform3D(1.76434, 0, 0, 0, 2.01868, 0, 0, 0, 1, 0.182956, 0.683346, 0.438366)
mesh = SubResource("SphereMesh_jmpnk")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_n7yko")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_tm7oi")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.8
path_height_offset = 0.1
avoidance_enabled = true
radius = 1.5
max_neighbors = 21
time_horizon_obstacles = 1.0
use_3d_avoidance = true
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(0, 1, 1, 1)

[node name="Area3D" type="Area3D" parent="."]

[node name="explosion" parent="." instance=ExtResource("2_hdrxm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00436276, 0)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.19465, 0.711908, 0.500111)
mesh = SubResource("SphereMesh_5bd4l")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.197357, 0.711908, 0.500111)
mesh = SubResource("SphereMesh_5bd4l")

[node name="Sprite3D" parent="." instance=ExtResource("3_uwwfn")]
texture = SubResource("ViewportTexture_xin7m")

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
